# spotify-scaler

./: Cargo.toml  README.md
src/: connect.rs  downloader.rs  main.rs
src/auth/: callback.html  mod.rs
