[package]
authors = ["Justin Gerhardt <justin@gerhardt.link>"]
edition = "2018"
name = "spotify-scaler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
env_logger = "0.7.1"
# futures = "0.3.13"
id3 = "0.3.0"
log = "0.4.8"
read-human = "0.1.1"
reqwest = "0.9.17"
rspotify = "0.10.0"
tokio = {version = "0.2.24", features = ["full"]}
tokio-core = "0.1.17"
tokio-io = "0.1.12"
tokio-timer = "0.2.12"
# librespot = "0.1.6"

[dependencies.librespot]
default-features = false
features = []
version = "0.1.6"

[dependencies.futures]
features = ["compat"]
version = "0.3.13"

[patch.crates-io]
rspotify = {git = "https://github.com/justin-gerhardt/rspotify", branch = "token_patch"}
