[package]
authors = ["Justin Gerhardt <justin@gerhardt.link>"]
edition = "2018"
name = "spotify-scaler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
env_logger = "0.7.1"
id3 = "0.3.0"
log = "0.4.8"
read-human = "0.1.1"
reqwest = "0.12.9"
rspotify = "0.13.3"
rustc-serialize = "0.3.25"
tokio = {version = "1", features = ["full"]}
personal-kv = { git = "ssh://git@github.com/justin-gerhardt/personal-kv.git" }
tiny_http = "0.12.0"


[dependencies.librespot]
default-features = false
features = []
version = "0.6.0"

[dependencies.futures]
features = ["compat"]
version = "0.3.13"
